<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_department"
        android:labelFor="@id/input_department"/>

    <EditText
        android:id="@+id/input_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_number"
        android:labelFor="@id/input_number"/>

    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_semester"/>

    <RadioGroup
        android:id="@+id/selection_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/button_fall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fall"/>

        <RadioButton
            android:id="@+id/button_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_spring"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_year"
        android:labelFor="@id/input_year"/>

    <EditText
        android:id="@+id/input_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

</LinearLayout>